--- a/sections/banner-with-text.liquid
+++ b/sections/banner-with-text.liquid
@@ -7,9 +7,11 @@
   <div class="{% unless secSt.section_width %} page-width{% endunless %}">
 
     {% for block in section.blocks limit: section.blocks.size %}
+
       {%- assign blkSt = block.settings -%}
       {%- assign box-delay = forloop.index | minus:1 -%}
       {%- assign delay_time = 50 | times : box-delay -%}
+      {%- assign textCenter = blkSt.text_center -%}
 
       {%- capture image_layout -%}
       <div class="{% unless hbStyle %}fl1{% endunless %}{% if hbStyle %}md:w-3/5 w-full md:order-0 order-5{% endif %} imgCol wow{% if blkSt.layout == 'right' %} fadeInRight{% else %} fadeInLeft{% endif %}" data-wow-delay="{{delay_time}}ms">
@@ -42,8 +44,8 @@
         {% endif %}
     
         {{ image_layout }}
-        <div class="{% unless hbStyle %}fl1{% endunless %}{% if hbStyle %}md:w-2/5 md:mb-8 mb-0 md:mt-0 mt-10{% endif %} feature-row__text {{ blkSt.layout }} wow{% if blkSt.layout == 'right' %} fadeInLeft{% else %} fadeInRight{% endif %}" data-wow-delay="{{delay_time}}ms">
-          <div class="row-text md:{{blkSt.text_align}} {% if hbStyle %}text-center !m-0 !p-0{% endif %}">
+        <div class="md:{{blkSt.text_align}} {% if textCenter %}md:text-left text-center {% endif %}{% unless hbStyle %}fl1 {% endunless %}{% if hbStyle %}md:w-2/5 md:mb-8 mb-0 md:mt-0 mt-10{% endif %} feature-row__text {{ blkSt.layout }} wow{% if blkSt.layout == 'right' %} fadeInLeft{% else %} fadeInRight{% endif %}" data-wow-delay="{{delay_time}}ms">
+          <div class="row-text {% if hbStyle %}!m-0 !p-0{% endif %}">
             {% if blkSt.title != blank %}
               <h3 class="{% if hbStyle %}md:!text-4_5xl !text-2_5xl{% endif %} ttlTxt mb{{secSt.tmbm}} mb{{secSt.tmb}}-md" style="--tcl:{{blkSt.tcl}};--tfs:{{secSt.tfs}}px;--tff:var(--{{secSt.tff}});--tfw:{{secSt.tfw}};--tlh:{{secSt.tlh}};">{{ blkSt.title }}</h3>
             {% endif %}
@@ -549,6 +551,12 @@
                 "label": "Right"
               }
             ]
+      },
+      {
+        "type": "checkbox",
+        "id": "text_center",
+        "label": "Text align center?(mobile)",
+        "default": false
       },
 	 {
         "type": "header",
