--- a/assets/custom.css
+++ b/assets/custom.css
@@ -64,7 +64,7 @@
 @media (min-width: 769px) {
   [section-name = 'store-features'] [tag-name = 'features-header'] p {
     font-size:1.25rem;
-    line-height:1.75rem;
+    line-height:1.5rem;
   }
 }
 
@@ -93,7 +93,7 @@
 #header {
   transition-property:color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration:300ms;
+  transition-duration:500ms;
 }
 
 body.template-index .stickyHeader [tag-name = 'reversal-logo'] {
@@ -314,25 +314,39 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   background-color:rgb(170 170 170 / var(--tw-bg-opacity));
 }
 
-@media only screen and (max-width:769px) {
-  .pr_thumbs_item {
-    margin-left:0.25rem;
-    margin-right:0.25rem;
-    width:5.65rem;
-  }
+.product-single .flickity-button {
+  display:none;
+}
 
-  @media (min-width: 769px) {
-    .pr_thumbs_item {
-      margin-left:0.3%;
-      margin-right:0.3%;
-      width:18.5%;
-    }
-  }
-
+@media (min-width: 921px) {
   .product-single .flickity-button {
-    display:none;
+    display:flex;
   }
+}
 
+.pr_thumbs_item {
+  margin-left:0.25rem;
+  margin-right:0.25rem;
+  width:5.65rem;
+}
+
+@media (min-width: 769px) {
+  .pr_thumbs_item {
+    margin-left:0.3%;
+    margin-right:0.3%;
+    width:18.5%;
+  }
+}
+
+@media (min-width: 921px) {
+  .pr_thumbs_item {
+    margin-left:.85%;
+    margin-right:.85%;
+    width:14.5%;
+  }
+}
+
+@media only screen and (max-width:769px) {
   [flickity-screen='pc']:after {
     --tw-content:none;
     content:var(--tw-content);
@@ -346,12 +360,16 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
   .notification-bar__message,
     #newsletter-modal .checkboxlink,
+    .btn-filter,
     #newsletter-modal p.sub-text {
     font-size:0.75rem !important;
     line-height:1rem !important;
   }
 
-  #MobileNav li a .at {
+  #MobileNav li a .at,
+    .grid-view-item .pr_price,
+    .list-view_title-column .pr_price,
+    .grid-view-item__title {
     font-size:0.875rem !important;
     line-height:1.25rem !important;
   }
@@ -364,6 +382,7 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     .closemmn .at,
     .site-footer,
     .footer-top .newsletter .btn,
+    .list-view-item__title,
     input, textarea, select {
     font-size:1rem !important;
     line-height:1.5rem !important;
@@ -392,11 +411,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     height:auto !important;
     width:9.5rem !important;
     max-width:none !important;
-  }
-
-  .page-width {
-    padding-left:1rem !important;
-    padding-right:1rem !important;
   }
 
   .mobile-nav-wrapper {
@@ -457,7 +471,8 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     max-width:none;
   }
 
-  #shopify-section-footer [section-name = 'localization'] img {
+  #shopify-section-footer [section-name = 'localization'] img,
+    .gridSwatches li {
     height:1.25rem;
     width:1.25rem;
   }
@@ -621,6 +636,12 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   }
 }
 
+@media (min-width: 921px) {
+  .container {
+    max-width:921px;
+  }
+}
+
 @media (min-width: 1024px) {
   .container {
     max-width:1024px;
@@ -660,22 +681,22 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .social-icons .social-icons__link i {
   margin-right:1rem;
-  font-size:1.5rem;
-  line-height:2rem;
+  font-size:1.375rem;
+  line-height:1.775rem;
 }
 
 @media (min-width: 769px) {
   .social-icons .social-icons__link i {
     margin-right:0px;
     font-size:1.25rem;
-    line-height:1.75rem;
+    line-height:1.5rem;
   }
 }
 
 .social-icons .icon {
   margin-right:1rem;
-  height:1.875rem;
-  width:1.875rem;
+  height:1.5rem;
+  width:1.5rem;
 }
 
 @media (min-width: 769px) {
@@ -748,10 +769,12 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   transition-duration:500ms;
 }
 
-.enlarge:hover {
-  --tw-scale-x:1.05;
-  --tw-scale-y:1.05;
-  transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+@media (min-width: 769px) {
+  .enlarge:hover {
+    --tw-scale-x:1.05;
+    --tw-scale-y:1.05;
+    transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
 }
 
 .visible {
@@ -832,10 +855,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .top-8 {
   top:2rem;
-}
-
-.top-1\/2 {
-  top:50%;
 }
 
 .z-10 {
@@ -951,6 +970,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .mb-4 {
   margin-bottom:1rem;
+}
+
+.mb-5 {
+  margin-bottom:1.25rem;
 }
 
 .mb-6 {
@@ -1085,8 +1108,8 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   height:3rem;
 }
 
-.h-32 {
-  height:8rem;
+.h-24 {
+  height:6rem;
 }
 
 .h-6 {
@@ -1127,10 +1150,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .h-px {
   height:1px;
-}
-
-.h-\[90vw\] {
-  height:90vw;
 }
 
 .max-h-36 {
@@ -1189,6 +1208,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   width:10rem;
 }
 
+.w-44 {
+  width:11rem;
+}
+
 .w-48 {
   width:12rem;
 }
@@ -1235,11 +1258,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .-translate-x-1\/2 {
   --tw-translate-x:-50%;
-  transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-1\/2 {
-  --tw-translate-y:-50%;
   transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1430,11 +1448,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   background-color:rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-black-400 {
-  --tw-bg-opacity:1;
-  background-color:rgb(170 170 170 / var(--tw-bg-opacity));
-}
-
 .bg-gradient-to-b {
   background-image:linear-gradient(to bottom, var(--tw-gradient-stops));
 }
@@ -1536,6 +1549,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   padding-right:1rem !important;
 }
 
+.\!px-6 {
+  padding-left:1.5rem !important;
+  padding-right:1.5rem !important;
+}
+
 .\!py-1 {
   padding-top:0.25rem !important;
   padding-bottom:0.25rem !important;
@@ -1581,11 +1599,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   padding-right:1.75rem;
 }
 
-.px-8 {
-  padding-left:2rem;
-  padding-right:2rem;
-}
-
 .py-1 {
   padding-top:0.25rem;
   padding-bottom:0.25rem;
@@ -1614,6 +1627,11 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 .py-8 {
   padding-top:2rem;
   padding-bottom:2rem;
+}
+
+.px-8 {
+  padding-left:2rem;
+  padding-right:2rem;
 }
 
 .pb-0 {
@@ -1704,10 +1722,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   padding-top:1.25rem;
 }
 
-.pt-14 {
-  padding-top:3.5rem;
-}
-
 .text-left {
   text-align:left;
 }
@@ -1721,8 +1735,8 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   line-height:2.15rem !important;
 }
 
-.\!text-6xl {
-  font-size:3.75rem !important;
+.\!text-5xl {
+  font-size:3rem !important;
   line-height:1 !important;
 }
 
@@ -1777,17 +1791,12 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .text-xl {
   font-size:1.25rem;
-  line-height:1.75rem;
+  line-height:1.5rem;
 }
 
 .text-xs {
   font-size:0.75rem;
   line-height:1rem;
-}
-
-.\!text-xxs {
-  font-size:0.65rem !important;
-  line-height:0.8rem !important;
 }
 
 .\!font-semibold {
@@ -1832,10 +1841,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .leading-tight {
   line-height:1.25;
-}
-
-.\!leading-\[90\%\] {
-  line-height:90% !important;
 }
 
 .\!text-white {
@@ -1897,15 +1902,15 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-inner {
-  --tw-shadow:inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored:inset 0 2px 4px 0 var(--tw-shadow-color);
+.shadow-\[\#ebebeb4f_0px_1px_10px_8px\] {
+  --tw-shadow:#ebebeb4f 0px 1px 10px 8px;
+  --tw-shadow-colored:0px 1px 10px 8px var(--tw-shadow-color);
   box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-lg {
-  --tw-shadow:0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored:0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+.shadow-inner {
+  --tw-shadow:inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored:inset 0 2px 4px 0 var(--tw-shadow-color);
   box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1918,12 +1923,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 .shadow-sm {
   --tw-shadow:0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored:0 1px 2px 0 var(--tw-shadow-color);
-  box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-xl {
-  --tw-shadow:0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored:0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -2191,6 +2190,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     margin-bottom:0.25rem;
   }
 
+  .md\:mb-10 {
+    margin-bottom:2.5rem;
+  }
+
   .md\:mb-12 {
     margin-bottom:3rem;
   }
@@ -2285,10 +2288,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
   .md\:mt-\[28\%\] {
     margin-top:28%;
-  }
-
-  .md\:mt-\[22\%\] {
-    margin-top:22%;
   }
 
   .md\:block {
@@ -2430,8 +2429,16 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     flex-direction:row;
   }
 
+  .md\:flex-col {
+    flex-direction:column;
+  }
+
   .md\:\!items-center {
     align-items:center !important;
+  }
+
+  .md\:justify-between {
+    justify-content:space-between;
   }
 
   .md\:rounded-none {
@@ -2610,10 +2617,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     text-align:left;
   }
 
-  .md\:text-center {
-    text-align:center;
-  }
-
   .md\:\!text-4_5xl {
     font-size:2.5rem !important;
     line-height:3rem !important;
@@ -2675,11 +2678,7 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
   .md\:text-xl {
     font-size:1.25rem;
-    line-height:1.75rem;
-  }
-
-  .md\:text-\[2\.625rem\] {
-    font-size:2.625rem;
+    line-height:1.5rem;
   }
 
   .md\:\!leading-\[95\%\] {
@@ -2707,12 +2706,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     --tw-shadow:inset 0px 0px 0px 3.5px white !important;
     --tw-shadow-colored:inset 0px 0px 0px 3.5px var(--tw-shadow-color) !important;
     box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
-  }
-
-  .md\:shadow {
-    --tw-shadow:0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-    --tw-shadow-colored:0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-    box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
 
   .md\:transition-all {
@@ -2744,6 +2737,28 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   }
 }
 
+@media (min-width: 921px) {
+  .pad\:mb-6 {
+    margin-bottom:1.5rem;
+  }
+
+  .pad\:w-2\/5 {
+    width:40%;
+  }
+
+  .pad\:w-3\/5 {
+    width:60%;
+  }
+
+  .pad\:w-\[40\.5\%\] {
+    width:40.5%;
+  }
+
+  .pad\:w-\[59\.5\%\] {
+    width:59.5%;
+  }
+}
+
 @media (min-width: 1024px) {
   .lg\:mb-8 {
     margin-bottom:2rem;
@@ -2759,10 +2774,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
   .lg\:mt-24 {
     margin-top:6rem;
-  }
-
-  .lg\:mt-12 {
-    margin-top:3rem;
   }
 
   .lg\:h-\[33vw\] {
@@ -2848,10 +2859,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
   .xl\:mt-14 {
     margin-top:3.5rem;
-  }
-
-  .xl\:mt-0 {
-    margin-top:0px;
   }
 
   .xl\:w-1\/7 {
