--- a/sections/data-statistics.liquid
+++ b/sections/data-statistics.liquid
@@ -2,14 +2,14 @@
 
 <section section-name="data-statistics" class="{% render 'section-interva-set' , secSt:secSt %}" >
 
-  <div class="page-width xl:px-4 md:px-8 px-4">
+  <div class="page-width xl:px-4 md:px-8 px-6">
     <div class="md:rounded-section rounded-4xl flex md:flex-row flex-col justify-between overflow-hidden" style="background-color: {{ secSt.bg_color }};">
       <div class="md:p-12 md:pb-0 px-3 md:w-[62%]">
         <h1 class="xl:text-[2.625rem] md:text-4xl text-2xl md:pt-0 pt-5 md:pb-12 pb-5 border-0 border-b-2 border-solid border-black-300 mb-0 relative
         after:content-[''] after:h-[2px] after:w-1/4 after:bg-black-900 after:block after:absolute after:-bottom-[2px]">{{ secSt.title }}</h1>
         <div class="md:mt-12 mt-6 flex flex-wrap">
           {% for block in section.blocks %}
-          <div class="w-1/2 mb-10">
+          <div class="w-1/2 md:mb-10 mb-5">
             <div class="flex items-end font-medium">
               <p class="lg:text-4xl text-2xl mb-0">{{block.settings.text_main}}</p>
               <p class="md:text-[1.25rem] text-sm md:ml-2 ml-1">{{block.settings.text_suf}}</p>
