--- a/sections/multiple-image-text.liquid
+++ b/sections/multiple-image-text.liquid
@@ -2,10 +2,10 @@
 
 {% if secSt.enable_slider %} {% assign ebSlider = true %} {% else %} {% assign ebSlider = false %} {% endif %}
 
-<section section-name="multiple-image-text" class="{% render 'section-interva-set', secSt:secSt %} page-width xl:px-4 px-8" >
+<section section-name="multiple-image-text" class="{% render 'section-interva-set', secSt:secSt %}" >
 
 
-  <div class="page-width {% if ebSlider %}md:px-4 !px-0{% else %}px-4{% endif %}">
+  <div class="page-width md:px-4 px-6 {% if ebSlider %}md:px-4 !px-0{% else %}px-4{% endif %}">
     <h1 class="md:text-4_5xl text-3xl text-center md:mb-12 mb-8">{{secSt.title}}</h1>
 
     <div {% if ebSlider %}tag-name='multiple-flickity' data-flickity='{"pageDots": false, "draggable": true, "imagesLoaded": true,"wrapAround":true }' {% else %} class="md:flex"{% endif %} >
@@ -52,7 +52,7 @@
 
           <section class="{% if textImg %}md:absolute md:bottom-6 md:left-6 md:text-white md:w-4/5 md:mx-0 mx-2{% endif %}">
             {% if blkSt.img_link != blank %} <a href="{{ blkSt.img_link }}" > {% endif %}
-              <h1 class="{% if textImg %}md:text-xl md:mb-1{% else %} md:text-3xl {% endif %}mb-2 text-xl">{{ blkSt.text_main }}</h1>
+              <h1 class="{% if textImg %}md:text-xl md:mb-1{% else %} md:text-3xl {% endif %}md:mb-2 mb-1 text-xl">{{ blkSt.text_main }}</h1>
               <p class="{% if textImg %}md:text-base{% else %}md:text-lg{% endif %} break-words">{{ blkSt.text_sub }}</p>
             {% if blkSt.img_link != blank %} </a> {% endif %}
           </section>
