--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -23,8 +23,8 @@
     assign product_description_width = 'wd50-md'
 
     if settings.product_latyout == "style1"
-        assign product_image_width = 'wd60-md xl:pr-10 lg:pr-6 md:pr-4 pr-0 pl-0 md:mb-6 mb-10'
-        assign product_description_width = 'wd40-md xl:pl-10 lg:pl-6 md:pl-4 md:pr-0'
+        assign product_image_width = 'xl:pr-10 lg:pr-6 md:pr-4 pr-0 pl-0 pad:mb-6 md:mb-0 mb-10 pad:w-3/5 md:w-1/2'
+        assign product_description_width = 'xl:pl-10 lg:pl-6 md:pl-4 md:pr-0 pad:w-2/5 md:w-1/2'
     elsif settings.product_latyout == "style2"
         assign product_image_width = 'wd66-md'
         assign product_description_width = 'wd33-md'
