--- a/snippets/product-column-img.liquid
+++ b/snippets/product-column-img.liquid
@@ -1,8 +1,8 @@
 {%- capture productTabs -%}
 <div section-name="product-column-img" class="mt-8 md:mb-0 mb-12 rounded-md overflow-hidden border-solid border border-black-300">
-  <div class="md:py-6 py-5 lg:px-12 md:px-5 px-3">
-    <ul class="flex text-sm justify-between">
-    {% assign liClass = 'text-center flex items-center flex-col' %}
+  <div class="md:py-6 py-5 lg:px-12 md:px-5">
+    <ul class="flex text-sm md:justify-between justify-center">
+    {% assign liClass = 'text-center flex items-center flex-col px-6' %}
     {% assign spanClass = 'w-11 h-11 flex items-center justify-center rounded-full border-solid border border-black-300 md:mb-2 mb-1' %}
     
       <li class="{{liClass}}"> 
