--- a/snippets/product-giveaways.liquid
+++ b/snippets/product-giveaways.liquid
@@ -1,5 +1,5 @@
 {%- capture productTabs -%}
-<div section-name="product-giveaways" class="md:mb-4 mb-8 rounded-md shadow-lg overflow-hidden">
+<div section-name="product-giveaways" class="md:mb-4 mb-8 rounded-md shadow-[#ebebeb4f_0px_1px_10px_8px] overflow-hidden">
   <div class="flex p-4">
     {{ block.Image | image_url: width: 200 | image_tag: width: nil, loading: 'lazy', class: "max-w-1/3 h-auto" }}
     <div class="ml-4">
