--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -164,7 +164,7 @@
   <div class="footer-bottom">
 
 
-    <div class="fl f-aic md:!items-center !items-start f-jcsb f-col f-row-md{% unless secSt.section_width %} page-width{% else %} fullwidth{% endunless %}">
+    <div class="fl f-aic md:!items-center !items-start f-jcsb f-col f-row-md{% unless secSt.section_width %} page-width xl:px-4 md:px-8 px-6{% else %} fullwidth{% endunless %}">
         <div class="hidden md:block"> {% render 'localization' %} </div>
         {% if secSt.copyright_text != blank %}
         <div class="fl1{% if secSt.show_payment %} tc tl-md{% else %} tc{% endif %} text-black-600">
