--- a/assets/custom.css
+++ b/assets/custom.css
@@ -2555,6 +2555,26 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     padding-bottom:1.5rem;
   }
 
+  .md\:\!px-6 {
+    padding-left:1.5rem !important;
+    padding-right:1.5rem !important;
+  }
+
+  .md\:\!py-2 {
+    padding-top:0.5rem !important;
+    padding-bottom:0.5rem !important;
+  }
+
+  .md\:\!px-5 {
+    padding-left:1.25rem !important;
+    padding-right:1.25rem !important;
+  }
+
+  .md\:\!py-1 {
+    padding-top:0.25rem !important;
+    padding-bottom:0.25rem !important;
+  }
+
   .md\:pb-0 {
     padding-bottom:0px;
   }
@@ -2754,6 +2774,16 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
   .pad\:w-\[59\.5\%\] {
     width:59.5%;
+  }
+
+  .pad\:\!px-7 {
+    padding-left:1.75rem !important;
+    padding-right:1.75rem !important;
+  }
+
+  .pad\:\!py-3 {
+    padding-top:0.75rem !important;
+    padding-bottom:0.75rem !important;
   }
 }
 
