--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1258,6 +1258,14 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   width:100%;
 }
 
+.w-4 {
+  width:1rem;
+}
+
+.w-5 {
+  width:1.25rem;
+}
+
 .max-w-1\/3 {
   max-width:33.333%;
 }
