--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1266,6 +1266,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   width:1.25rem;
 }
 
+.w-3\/5 {
+  width:60%;
+}
+
 .max-w-1\/3 {
   max-width:33.333%;
 }
